# bootcom

./: Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
src/: boot_protocol.rs  boot_server.rs  lib.rs  settings.rs  utils.rs
src/boot_protocol/: events.rs  macros.rs  state_machine.rs  states.rs
src/boot_server/: events.rs  state_machine.rs  states.rs
src/utils/: kernel.rs  keyboard.rs  ports.rs
